--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
   <div class="container">
     <header class="header">
-        <h1>Swimming</h1>
-        <ul>
+        <h1 class="h1">Swimming</h1>
+        <ul class="nav-list">
             <li>Home</li>
-            <li>About us</li>
+            <li>About</li>
             <li>Gallary</li>
             <li>Blog</li>
             <li>Contacts</li>
@@ -28,4 +28,5 @@
    
     
 </body>
+<script src="script.js"></script>
 </html>
