--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/styles/style.css">
     <!-- <link rel="stylesheet" href="/styles/responsive.css"> -->
     <title>Swimming</title>
@@ -75,15 +76,15 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia laboriosam aperiam quo eaque eius iusto
             perferendis enim! Dolor consequuntur provident expedita molestias pariatur optio, obcaecati nesciunt quae,
             repellendus aperiam nam aut officiis?</p>
-            <button class="read-more-btn">Read More</button>
-  
+          <button class="read-more-btn">Read More</button>
+
         </section>
         <section class="section-two-right">
           <img src="/images/baby-swim.png" alt="boby-img">
-  
+
         </section>
       </div>
-            <!-- section 3 -->
+      <!-- section 3 -->
 
       <div class="section-two">
         <section class="section-two-left" style="order: 2;">
@@ -91,15 +92,15 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia laboriosam aperiam quo eaque eius iusto
             perferendis enim! Dolor consequuntur provident expedita molestias pariatur optio, obcaecati nesciunt quae,
             repellendus aperiam nam aut officiis?</p>
-            <button class="read-more-btn">Read More</button>
-  
+          <button class="read-more-btn">Read More</button>
+
         </section>
         <section class="section-two-right">
           <img src="/images/pool.png" alt="boby-img">
-  
+
         </section>
       </div>
-      
+
 
     </main>
     <!-- section 4 -->
@@ -108,35 +109,109 @@
       <div class="section-4-content">
         <div>
           <h1>Why Our Swimming school is rated #1 in the region.</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id dignissimos sed, hic natus magnam enim quod alias dolor! Nemo, ea? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, ut?</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id dignissimos sed, hic natus magnam enim quod alias dolor! Nemo, ea? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, ut?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id dignissimos sed, hic natus magnam enim quod
+            alias dolor! Nemo, ea? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, ut?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id dignissimos sed, hic natus magnam enim quod
+            alias dolor! Nemo, ea? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, ut?</p>
           <button>Read More</button>
         </div>
 
       </div>
     </section>
-<!-- section 5 -->
-<section class="section-5" >
-  <section>
-   <div>
-    <h3>Our events</h3>  
-    <ul>
-      <li>1 Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
-      <li>2 Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
-      <li>3 Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
-      <li>4 Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
-      <li>5 Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
-      <li>6 Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
-      
-    </ul>
-   </div>
-</section>
-  <section>
-    <img src="/images/underwate.png" alt="underwater">
-  </section>
-</section>
+    <!-- section 5 -->
+    <section class="section-5">
+      <section>
+        <div>
+          <h3>Our events</h3>
+          <ul>
+            <li>1 Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+            <li>2 Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+            <li>3 Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+            <li>4 Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+            <li>5 Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+            <li>6 Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+
+          </ul>
+        </div>
+      </section>
+      <section>
+        <img src="/images/swimming-img.jpg" alt="underwater">
+      </section>
+    </section>
+    <!-- setion-6 -->
+    <section class="section-6">
+      <div>
+        <img src="/images/baby-swim.png" alt="" width="100" height="100">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, officia! Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Ut neque corrupti doloremque facilis esse! Aliquam doloremque eveniet omnis vero
+          fugit.</p>
+        <h6>Saim 10 Y.O</h6>
+      </div>
+      <div>
+        <img src="/images/baby-swim.png" alt="" width="100" height="100">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, officia! Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Ut neque corrupti doloremque facilis esse! Aliquam doloremque eveniet omnis vero
+          fugit.</p>
+        <h6>Saim 10 Y.O</h6>
+      </div>
+      <div>
+        <img src="/images/baby-swim.png" alt="" width="100" height="100">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, officia! Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Ut neque corrupti doloremque facilis esse! Aliquam doloremque eveniet omnis vero
+          fugit.</p>
+        <h6>Saim 10 Y.O</h6>
+      </div>
+      <div>
+        <img src="/images/baby-swim.png" alt="" width="100" height="100">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, officia! Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Ut neque corrupti doloremque facilis esse! Aliquam doloremque eveniet omnis vero
+          fugit.</p>
+        <h6>Saim 10 Y.O</h6>
+      </div>
+    </section>
+
+    <!-- section 7 -->
+    <section class="section-7">
+      <div>
+        <h4>Contacts</h4>
+
+
+        <i class="fas fa-map-marker-alt"> &nbsp; &nbsp;OffSetup Tech G11 Markaz Islamabad.</i>
+        <br>
+        <i class="fas fa-mobile-alt"> &nbsp; &nbsp; 01230-8765-987-09</i>
+        <br>
+        <i class="fas fa-envelope"> &nbsp; &nbsp;Example@gmail.com</i>
+        <!-- <div class="social-icons-1">
+          <h5>Follow us</h5>
+          <ul>
+            <li><i class="fas fa-mobile-alt"> </i></li>
+            <li><i class="fas fa-mobile-alt"> </i></li>
+            <li><i class="fas fa-mobile-alt"> </i></li>
+            <li><i class="fas fa-mobile-alt"> </i></li>
+          </ul>
+        </div> -->
+      </div>
+
+
+      <div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3320.5448576748845!2d72.9961770645441!3d33.66895329527972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38df95ff25ef0ae9%3A0xd74faf85d90645e5!2sG-11%20Markaz%20G%2011%20Markaz%20G-11%2C%20Islamabad%2C%20Islamabad%20Capital%20Territory%2C%20Pakistan!5e0!3m2!1sen!2s!4v1623617600783!5m2!1sen!2s"
+          width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+      </div>
+      </div>
+    </section>
+
+    <!-- footer -->
+    <footer class="footer">
+      <p>Copyright &copy; 2021 - Swimming.com | All Right Reserved</p>
+    </footer>
 
   </body>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7U4nFcGk1aVy6QXVZqp0FF5mZ9bZgf4k&callback=initMap&libraries=&v=weekly"
+    async></script>
   <script src="script.js"></script>
+
 
 </html>
