--- a/paymentPlan.html
+++ b/paymentPlan.html
@@ -1,31 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="/styles/payment.css">
-    <title>Payment Plan</title>
-</head>
-<body>
 
-    <main class="main-container">
-        <section class="main-section">
-            <div class="title">
-                <h3>BASIC</h3>
-            </div>
-        </section>
-        <section class="main-section">
-            <div class="title">
-                <h3>BASIC</h3>
-            </div>
-        </section>
-        <section class="main-section">
-            <div class="title">
-                <h3>BASIC</h3>
-            </div>
-        </section>
-    </main>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+
+        <link rel="stylesheet" href="/styles/payment.css">
+        <title>Payment Plan</title>
+    </head>
+
+    <body>
+
+        <main class="main-container">
+
+            <!-- basic -->
+            <section class="main-section">
+                <div id="basic" class="title">
+                    <h3>BASIC</h3>
+                </div>
+                <div class="price">
+                    <h1>$ 2.99</h1>
+                    <small>per month</small>
+                </div>
+                <div class="features-div">
+                    <span class="selected-span">
+                        <i class="fas fa-check-square"></i>
+                        <small>Simple Text Here</small>
+                    </span>
+                    <span class="cross-span">
+                        <i class="fas fa-times"></i>
+                        <small>Other Text Title</small>
+                    </span>
+                    <span class="cross-span">
+                        <i class="fas fa-times"></i>
+                        <small>Text Space Goes</small>
+                    </span>
+                    <span class="cross-span">
+                        <i class="fas fa-times"></i>
+                        <small>Description Space</small>
+                    </span>
+                    <span class="cross-span">
+                        <i class="fas fa-times"></i>
+                        <small>Simple Text Here</small>
+                    </span>
+                </div>
+                <div class=" btn-wrapper">
+                    <button class="selected-btn">Select</button>
+                </div>
+            </section>
+
+            <!-- standerd -->
+            <section class="main-section">
+                <div id="standerd" class="title">
+                    <h3>STANDERD</h3>
+                </div>
+                <div id="standerd-div">
+                    <div class="price">
+                        <h1>$ 5.99</h1>
+                        <small>per month</small>
+                    </div>
+                    <div class="features-div" id="features-id">
+                        <span class="selected-span">
+                            <i class="fas fa-check-square"></i>
+                            <small>Simple Text Here</small>
+                        </span>
+                        <span class="selected-span">
+                            <i class="fas fa-check-square"></i>
+                            <small>Other Text Title</small>
+                        </span>
+                        <span class="selected-span">
+                            <i class="fas fa-check-square"></i>
+                            <small>Text Space Goes</small>
+                        </span>
+                        <span class="cross-span">
+                            <i class="fas fa-times"></i>
+                            <small>Description Space</small>
+                        </span>
+                        <span class="cross-span">
+                            <i class="fas fa-times"></i>
+                            <small>Simple Text Here</small>
+                        </span>
+                    </div>
+                    <div class=" btn-wrapper">
+                        <button class="selected-btn">Select</button>
+                    </div>
+                </div>
+            </section>
+
+
+            <!-- premium -->
+            <section class="main-section">
+                <div id="premium" class="title">
+                    <h3>PREMIUM</h3>
+                </div>
+                <div id="premium-div">
+                    <div class="price">
+                        <h1>$ 9.99</h1>
+                        <small>per month</small>
+                    </div>
+                    <div class="features-div">
+                        <span class="selected-span">
+                            <i class="fas fa-check-square"></i>
+                            <small>Simple Text Here</small>
+                        </span>
+                        <span class="selected-span">
+                            <i class="fas fa-check-square"></i>
+                            <small>Other Text Title</small>
+                        </span>
+                        <span class="selected-span">
+                            <i class="fas fa-check-square"></i>
+                            <small>Text Space Goes</small>
+                        </span>
+                        <span class="selected-span">
+                            <i class="fas fa-check-square"></i>
+                            <small>Description Space</small>
+                        </span>
+                        <span class="selected-span">
+                            <i class="fas fa-check-square"></i>
+                            <small>Simple Text Here</small>
+                        </span>
+
+                    </div>
+                    <div class=" btn-wrapper">
+                        <button class="selected-btn">Select</button>
+                    </div>
+                </div>
+            </section>
+        </main>
+
+    </body>
+
 </html>
