--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Gallary</a></li>
-          <li><a href="#">Blog</a></li>
+          <li><a href="/paymentPlan.html">Payments</a></li>
           <li><a href="#">Contacts</a></li>
         </ul>
       </header>
@@ -69,14 +69,20 @@
     </div>
 
     <main style="    margin: 100px 100px 10px 100px;">
+
       <!-- section 2 -->
       <div class="section-two">
         <section class="section-two-left">
-          <h3>Wlecome to our School!!</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia laboriosam aperiam quo eaque eius iusto
-            perferendis enim! Dolor consequuntur provident expedita molestias pariatur optio, obcaecati nesciunt quae,
-            repellendus aperiam nam aut officiis?</p>
-          <button class="read-more-btn">Read More</button>
+          <div>
+            <h3>Wlecome to our School!!</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia laboriosam aperiam quo eaque eius iusto
+              perferendis enim! Dolor consequuntur provident expedita molestias pariatur optio, obcaecati nesciunt quae,
+              repellendus aperiam nam aut officiis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia
+              laboriosam aperiam quo eaque eius iusto
+              perferendis enim! Dolor consequuntur provident expedita molestias pariatur optio, obcaecati nesciunt quae,
+            </p>
+            <button class="read-more-btn">Read More</button>
+          </div>
 
         </section>
         <section class="section-two-right">
@@ -84,89 +90,93 @@
 
         </section>
       </div>
+
       <!-- section 3 -->
-
-      <div class="section-two">
+      <div class="section-two section-3">
         <section class="section-two-left" style="order: 2;">
-          <h3>Swimming lessons for Childen and teens</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia laboriosam aperiam quo eaque eius iusto
-            perferendis enim! Dolor consequuntur provident expedita molestias pariatur optio, obcaecati nesciunt quae,
-            repellendus aperiam nam aut officiis?</p>
-          <button class="read-more-btn">Read More</button>
-
+          <div>
+            <h3>Swimming lessons for Childen and teens</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia laboriosam aperiam quo eaque eius iusto
+              perferendis enim! Dolor consequuntur provident expedita molestias pariatur optio, obcaecati nesciunt quae,
+              repellendus aperiam nam aut officiis?</p>
+            <button class="read-more-btn">Read More</button>
+          </div>
         </section>
         <section class="section-two-right">
           <img src="/images/pool.png" alt="boby-img">
 
         </section>
       </div>
-
-
     </main>
+
     <!-- section 4 -->
     <section class="section-4">
       <div class="img-wrapper"></div>
       <div class="section-4-content">
         <div>
           <h1>Why Our Swimming school is rated #1 in the region.</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id dignissimos sed, hic natus magnam enim quod
+          <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id dignissimos sed, hic natus
+            magnam enim quod
             alias dolor! Nemo, ea? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, ut?</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id dignissimos sed, hic natus magnam enim quod
+          <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id dignissimos sed, hic natus
+            magnam enim quod
             alias dolor! Nemo, ea? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, ut?</p>
           <button>Read More</button>
         </div>
 
       </div>
     </section>
+
     <!-- section 5 -->
     <section class="section-5">
-      <section>
-        <div>
-          <h3>Our events</h3>
-          <ul>
-            <li>1 Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
-            <li>2 Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
-            <li>3 Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
-            <li>4 Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
-            <li>5 Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
-            <li>6 Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
 
-          </ul>
-        </div>
-      </section>
+      <div>
+        <h3>Our events</h3>
+        <ul>
+          <li>1 -- Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+          <li>2 -- Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+          <li>3 -- Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+          <li>4 -- Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+          <li>5 -- Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+          <li>6 -- Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+
+        </ul>
+      </div>
+
       <section>
         <img src="/images/swimming-img.jpg" alt="underwater">
       </section>
     </section>
+
     <!-- setion-6 -->
     <section class="section-6">
       <div>
-        <img src="/images/baby-swim.png" alt="" width="100" height="100">
+        <img src="/images/profile-1.png" alt="" width="100" height="100">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, officia! Lorem ipsum dolor sit amet
           consectetur adipisicing elit. Ut neque corrupti doloremque facilis esse! Aliquam doloremque eveniet omnis vero
           fugit.</p>
         <h6>Saim 10 Y.O</h6>
       </div>
       <div>
-        <img src="/images/baby-swim.png" alt="" width="100" height="100">
+        <img src="/images/profile-2.png" alt="" width="100" height="100">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, officia! Lorem ipsum dolor sit amet
           consectetur adipisicing elit. Ut neque corrupti doloremque facilis esse! Aliquam doloremque eveniet omnis vero
           fugit.</p>
-        <h6>Saim 10 Y.O</h6>
+        <h6>Sara 13 Y.O</h6>
       </div>
       <div>
-        <img src="/images/baby-swim.png" alt="" width="100" height="100">
+        <img src="/images/profile-3.png" alt="" width="100" height="100">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, officia! Lorem ipsum dolor sit amet
           consectetur adipisicing elit. Ut neque corrupti doloremque facilis esse! Aliquam doloremque eveniet omnis vero
           fugit.</p>
-        <h6>Saim 10 Y.O</h6>
+        <h6>zoya 16 Y.O</h6>
       </div>
       <div>
-        <img src="/images/baby-swim.png" alt="" width="100" height="100">
+        <img src="/images/profile-4.png" alt="" width="100" height="100">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, officia! Lorem ipsum dolor sit amet
           consectetur adipisicing elit. Ut neque corrupti doloremque facilis esse! Aliquam doloremque eveniet omnis vero
           fugit.</p>
-        <h6>Saim 10 Y.O</h6>
+        <h6>Shad 13 Y.O</h6>
       </div>
     </section>
 
@@ -174,30 +184,34 @@
     <section class="section-7">
       <div>
         <h4>Contacts</h4>
+        <div>
+          <img src="/images/location-icon.png" width="30" height="30" alt="">
+          <figcaption>OffSetup Tech G11 Markaz Islamabad.</figcaption>
+        </div>
+        <div>
+          <img src="/images/phone.png" width="30" height="30" alt="">
+          <figcaption>01230-8765-987-09</figcaption>
+        </div>
+        <div>
+          <img src="/images/email.png" width="30" height="30" alt="">
+          <figcaption>Example@gmail.com</figcaption>
+        </div>
+        <div>
 
+          <b>Follow Us 👉</b>
+          <figure class="social-icon">
+            <img src="/images/facebook.png" alt="">
+            <img src="/images/instagram.png" alt="">
+            <img src="/images/youtube.png" alt="">
+            <img src="/images/twitter.png" alt="">
+          </figure>
 
-        <i class="fas fa-map-marker-alt"> &nbsp; &nbsp;OffSetup Tech G11 Markaz Islamabad.</i>
-        <br>
-        <i class="fas fa-mobile-alt"> &nbsp; &nbsp; 01230-8765-987-09</i>
-        <br>
-        <i class="fas fa-envelope"> &nbsp; &nbsp;Example@gmail.com</i>
-        <!-- <div class="social-icons-1">
-          <h5>Follow us</h5>
-          <ul>
-            <li><i class="fas fa-mobile-alt"> </i></li>
-            <li><i class="fas fa-mobile-alt"> </i></li>
-            <li><i class="fas fa-mobile-alt"> </i></li>
-            <li><i class="fas fa-mobile-alt"> </i></li>
-          </ul>
-        </div> -->
+        </div>
       </div>
-
-
       <div>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3320.5448576748845!2d72.9961770645441!3d33.66895329527972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38df95ff25ef0ae9%3A0xd74faf85d90645e5!2sG-11%20Markaz%20G%2011%20Markaz%20G-11%2C%20Islamabad%2C%20Islamabad%20Capital%20Territory%2C%20Pakistan!5e0!3m2!1sen!2s!4v1623617600783!5m2!1sen!2s"
-          width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-
+          style="border:0;" allowfullscreen="" loading="lazy" width="100%" height="100%"></iframe>
       </div>
       </div>
     </section>
@@ -206,11 +220,7 @@
     <footer class="footer">
       <p>Copyright &copy; 2021 - Swimming.com | All Right Reserved</p>
     </footer>
-
   </body>
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7U4nFcGk1aVy6QXVZqp0FF5mZ9bZgf4k&callback=initMap&libraries=&v=weekly"
-    async></script>
   <script src="script.js"></script>
 
 
