--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/responsive.css">
+
     <title>Swimming</title>
   </head>
 
@@ -31,36 +32,70 @@
           <li><a href="#">Contacts</a></li>
         </ul>
       </header>
+
       <section class="hero-section">
+        <section class="hero-silder">
+          <!-- silder 1 -->
+          <div id="slider-1">
+
+            <h6>Saim 10 Y.O</h6>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, officia! Lorem ipsum dolor sit amet
+              consectetur .</p>
+          </div>
+          <!-- silder2 -->
+
+          <div id="slider-2">
+
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, officia! Lorem ipsum dolor sit amet
+              consectetur </p>
+            <h6>Sara 13 Y.O</h6>
+          </div>
+          <!-- silder 3 -->
+
+          <div id="slider-3">
+
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, officia! Lorem ipsum dolor sit amet
+              consectetur adipisicing.</p>
+            <h6>zoya 16 Y.O</h6>
+          </div>
+          <!-- slider 4 -->
+
+          <div id="slide4">
+
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, officia! Lorem ipsum dolor sit amet
+              consectetur adipisicing .</p>
+            <h6>Shad 16 Y.O</h6>
+          </div>
 
 
 
 
 
+        </section>
 
         <div class="hero-card-section">
-          <div>
+          <div class="card-wrapper">
             <h3>Register for swim lessons</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, Lorem ipsum dolor , <b
                 style="font-size: 20px;">></b>
             </p>
           </div>
-          <div>
+          <div class="card-wrapper">
             <h3>Lorem ipsum dolor sit amet.</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, Lorem ipsum dolor , <b
                 style="font-size: 20px;">></b>
             </p>
           </div>
-          <div>
+          <div class="card-wrapper">
             <h3>Register for swim lessons</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, Lorem ipsum dolor , <b
                 style="font-size: 20px;">></b>
             </p>
           </div>
-          <div>
+          <div class="card-wrapper">
             <h3>Register for swim lessons</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, Lorem ipsum dolor , <b
@@ -92,7 +127,7 @@
         </section>
         <section class="section-two-right">
           <img id='baby-img-lg' src="/images/baby-swim.png" alt="boby-img">
-          <img id='baby-img-md' src="/images/baby-swim-1200px.png" alt="boby-img">
+          <!-- <img id='baby-img-md' src="/images/baby-swim-1200px.png" alt="boby-img"> -->
 
         </section>
       </div>
@@ -110,7 +145,7 @@
         </section>
         <section class="section-two-right">
           <img id="baby-img-lg" src="/images/pool.png" alt="boby-img">
-          <img id="baby-img-md" src="/images/swimming-img.jpg" alt="boby-img">
+          <!-- <img id="baby-img-md" src="/images/swimming-img.jpg" alt="boby-img"> -->
 
 
         </section>
@@ -188,6 +223,56 @@
       </div>
     </section>
 
+    <section class="section-6-1">
+
+
+
+      <!-- silder 1 -->
+      <div id="slider-1">
+        <img src="/images/profile-1.png" alt="" width="100" height="100">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, officia! Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Ut neque corrupti doloremque facilis esse! Aliquam doloremque eveniet omnis
+          vero
+          fugit.</p>
+        <h6>Saim 10 Y.O</h6>
+      </div>
+      <!-- silder2 -->
+
+      <div id="slider-2">
+        <img src="/images/profile-2.png" alt="" width="100" height="100">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, officia! Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Ut neque corrupti doloremque facilis esse! Aliquam doloremque eveniet omnis
+          vero
+          fugit.</p>
+        <h6>Sara 13 Y.O</h6>
+      </div>
+      <!-- silder 3 -->
+
+      <div id="slider-3">
+        <img src="/images/profile-3.png" alt="" width="100" height="100">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, officia! Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Ut neque corrupti doloremque facilis esse! Aliquam doloremque eveniet omnis
+          vero
+          fugit.</p>
+        <h6>zoya 16 Y.O</h6>
+      </div>
+      <!-- slider 4 -->
+
+      <div id="slide4">
+        <img src="/images/profile-4.png" alt="" width="100" height="100">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, officia! Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Ut neque corrupti doloremque facilis esse! Aliquam doloremque eveniet omnis
+          vero
+          fugit.</p>
+        <h6>Shad 16 Y.O</h6>
+      </div>
+
+
+
+
+
+    </section>
+
     <!-- section 7 -->
     <section class="section-7">
       <div>
@@ -216,7 +301,7 @@
 
         </div>
       </div>
-      <div>
+      <div class='google-map'>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3320.5448576748845!2d72.9961770645441!3d33.66895329527972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38df95ff25ef0ae9%3A0xd74faf85d90645e5!2sG-11%20Markaz%20G%2011%20Markaz%20G-11%2C%20Islamabad%2C%20Islamabad%20Capital%20Territory%2C%20Pakistan!5e0!3m2!1sen!2s!4v1623617600783!5m2!1sen!2s"
           style="border:0;" allowfullscreen="" loading="lazy" width="100%" height="100%"></iframe>
